Updated main page

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,8 +5,9 @@
                 <div class="row">           
                     <div class="col9 content">
                         <h1>Born to be</h1>
-                        <p>All the Devoxx talks now available on Parleys.com!</p>
-                        <a href="http://us2.campaign-archive2.com/?u=d777b04a23f45f06379a1e710&id=e4f16ea20a" class="btn">More Info</a>
+                        <p>Stream or download all the Devoxx 2013 presentations on your iPad or Android device.</p>
+                        <a href="https://play.google.com/store/apps/details?id=com.parleys.android.devoxx2013" class="btn">iPad</a>
+                        <a href="https://itunes.apple.com/us/app/devoxx-2013/id785466681" class="btn">Android</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
@@ -40,8 +41,8 @@
                 <div class="row">
                     <div class="col9 content">
 
-                        <h1>Happy Holidays</h1>
-                        <p>Best wishes from the Devoxx team!</p>
+                        <h1>Happy</BR> New</BR> Year</h1>
+                        <p>Best wishes from the Devoxx team,</br> lets turn 2014 into a great Java Community year!</p>
 
                     </div>
                     <div class="col11">
