Corrected mobile link

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,8 +6,8 @@
                     <div class="col9 content">
                         <h1>Born to be</h1>
                         <p>Stream or download all the Devoxx 2013 presentations on your iPad or Android device.</p>
-                        <a href="https://play.google.com/store/apps/details?id=com.parleys.android.devoxx2013" class="btn">iPad</a>
-                        <a href="https://itunes.apple.com/us/app/devoxx-2013/id785466681" class="btn">Android</a>
+                        <a href="https://itunes.apple.com/us/app/devoxx-2013/id785466681" class="btn">iPad</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.parleys.android.devoxx2013" class="btn">Android</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
