Added DevoxxUK news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -91,6 +91,13 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://www.devoxx.co.uk"><img src="../images/news/DevoxxUK.jpg" alt=""></a>
+                <div class="date">20 Jan. '14</div>
+                <h4>Devoxx UK 2014</h4>
+                <p>It's official. DevoxxUK will run June 12-13 this year. Call for Papers and registration are now open!</p>
+                <p><a href="http://www.devoxx.co.uk">More details</a></p>
+            </li>
+            <li>
                 <img src="../images/news/Mobile.jpg" alt="">
                 <div class="date">1 Jan. '14</div>
                 <h4>Mobile Devoxx 2013</h4>
