--- a/app/views/home.html
+++ b/app/views/home.html
@@ -78,7 +78,9 @@
             </div>
             <div class="col7 push1 content">
                 <h2>Belgium welcomed again 3500 Devoxxians</h2>
-                <p>Next up: Devoxx France (Paris, April 16-18th)</p>
+                <p>Next up:</p>
+                <p>Devoxx France (Paris, April 16-18th)</p>
+                <p>Devoxx UK (London, June 12-13th)</p>
                 <!--<a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>-->
             </div>
         </div>
@@ -91,7 +93,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
-                <a href="http://www.devoxx.co.uk"><img src="../images/news/DevoxxUK.jpg" alt=""></a>
+                <a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=435b8f100a"><img src="../images/news/DevoxxUK.jpg" alt=""></a>
+                <div class="date">21 Jan. '14</div>
+                <h4>Devoxx 2014 Newsletter</h4>
+                <p>Find out more about Devoxx UK, France and Devoxx4Kids in our latest 2014 newsletter</p>
+                <p><a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=435b8f100a">Read newsletter</a></p>
+            </li>
+            <li>
+                <a href="http://www.devoxx.co.uk"><img src="../images/news/newsletter2014.jpg" alt=""></a>
                 <div class="date">20 Jan. '14</div>
                 <h4>Devoxx UK 2014</h4>
                 <p>It's official. DevoxxUK will run June 12-13 this year. Call for Papers and registration are now open!</p>
