--- a/app/views/home.html
+++ b/app/views/home.html
@@ -34,26 +34,6 @@
 
             </div>
         </li>
-
-        <li>
-            <div class="grid">
-
-                <div class="row">
-                    <div class="col9 content">
-
-                        <h1>Happy</BR> New</BR> Year</h1>
-                        <p>Best wishes from the Devoxx team,</br> lets turn 2014 into a great Java Community year!</p>
-
-                    </div>
-                    <div class="col11">
-
-                        <img src="images_dummy/holidays.png" class="visual" alt="Be born again">
-
-                    </div>
-                </div>
-
-            </div>
-        </li>
 </div>
 
 
@@ -81,6 +61,7 @@
                 <p>Next up:</p>
                 <p>Devoxx France (Paris, April 16-18th)</p>
                 <p>Devoxx UK (London, June 12-13th)</p>
+                <p>Devoxx Belgium (Antwerp, November 10-14th)</p>
                 <!--<a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>-->
             </div>
         </div>
