--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -27,7 +27,12 @@
 
                     <h4 class="acco_title">Registration</h4>
                     <div class="acco_content" style="display: block;">
-                        <p>Devoxx is sold out, you can still register with your <a href="https://regbe.devoxx.com">discount code </a>.</p>
+                        <p>Devoxx 2014 registrations will open in June.</p>
+                    </div>
+
+                    <h4 class="acco_title">Call For Papers</h4>
+                    <div class="acco_content" style="display: block;">
+                        <p>The Devoxx 2014 call for papers will open in June.</p>
                     </div>
 
                     <h4 class="acco_title">Prices</h4>
@@ -37,7 +42,7 @@
                             Devoxx Conference is 470 Euro (3 days) SOLD OUT<br>
                             Devoxx Combi ticket is 725 Euro (5 days) SOLD OUT<br>
                             All prices are excluding 21% VAT<br>
-                            Every attendee receives full access to the Devoxx 2013 channel on <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations">Parleys.com</a>!</p>
+                            Every attendee receives full access to the Devoxx 2014 channel on <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations">Parleys.com</a>!</p>
                         </div>
 
                     <h4 class="acco_title">Event Types</h4>
