Updated Devoxx UK site link

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -53,7 +53,7 @@
                     <img src="../images/home_about_map.png" alt="map" />
                     <a href="#home" class="btn_be"><span>Belgium</span></a>
                     <a href="http://www.devoxx.fr" class="btn_fr"><span>France</span></a>
-                    <a href="http://www.devoxx.com/display/UK13/Home" class="btn_uk"><span>United Kingdom</span></a>
+                    <a href="http://www.devoxx.co.uk" class="btn_uk"><span>United Kingdom</span></a>
                 </div>
             </div>
             <div class="col7 push1 content">
