--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col9">
                     <h1>Sponsorship Opportunities</h1>
-                    <p>Want to sponsor Devoxx Belgium 2013?</br>
+                    <p>Want to sponsor Devoxx Belgium?</br>
                         Then please contact Kristien Leyn at <a href="mailto:kle@bejug.org">kle@bejug.org</a></p>
                 </div>
             </div>
@@ -17,7 +17,7 @@
 
             <div class="row">
                 <div class="col15">
-                    <h2>Meet our platinum sponsors</h2>
+                    <h2>Meet our 2013 platinum sponsors</h2>
                     <p>Devoxx would be less fun and more expensive without our platinum sponsors!</p>
                 </div>
             </div>
