--- a/app/styles/wall.less
+++ b/app/styles/wall.less
@@ -63,13 +63,14 @@ h1 {
 
          .border {
             > div {
-                width: 760px;
+                width: 756px;
                 height: 82px;
                 clear:both;
-                margin: 7px;
-                background: rgba(10,10,10,.7);
-                -webkit-box-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+                margin: 9px;
+                background: rgba(10,10,10,0.9);
                 -webkit-border-radius: 10px;
+                border: solid 1px yellow;
+                -webkit-box-shadow: yellow 0 0 5px;
                 overflow: hidden;
             }
          }
@@ -100,7 +101,7 @@ h1 {
             margin-left: 120px;
             margin-right: 5px;
             font-family: 'Lato';
-            font-size: 1.50em;
+            font-size: 1.40em;
             font-weight: bold;
             line-height: 1.1em;
             color: white;
@@ -145,9 +146,11 @@ h1 {
                 margin: 20px;
                 margin-top: 60px;
                 margin-bottom: 60px;
-                background: rgba(10,10,10,.7);
-                -webkit-box-shadow: 2px 2px 10px 5px rgba(0,0,0,0.7);
+                background: rgba(10,10,10,.9);
                 -webkit-border-radius: 10px;
+                border: solid 1px yellow;
+                -webkit-box-shadow: yellow 0 0 5px;
+
                 overflow: hidden;
             }
         }
@@ -164,7 +167,7 @@ h1 {
             margin-left: 5px;
             margin-right: 5px;
             font-family: 'Lato';
-            font-size: 1.50em;
+            font-size: 1.40em;
             font-weight: bold;
             line-height: 1.2em;
             color: white;
